# freetype-gl

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  distance-field.c  distance-field.h  edtaa3func.c  edtaa3func.h  font-manager.c  font-manager.h  freetype-gl-err.c  freetype-gl-err.h  freetype-gl.h  makefont.c  markup.h  platform.c  platform.h  text-buffer.c  text-buffer.h  texture-atlas.c  texture-atlas.h  texture-font.c  texture-font.h  utf8-utils.c  utf8-utils.h  vec234.h  vector.c  vector.h  vertex-attribute-gl.c  vertex-attribute-gl.h  vertex-attribute.c  vertex-buffer-gfx.c  vertex-buffer-gl.h  vertex-buffer.c  vertex-buffer.h
.launchers/: freetype-gl harfbuzz-markup.launch  freetype-gl harfbuzz.launch
demos/: CMakeLists.txt  ansi.c  atb-agg.c  benchmark.c  cartoon.c  console.c  cube.c  distance-field-2.c  distance-field-3.c  distance-field.c  embedded-font.c  font.c  gamma.c  glyph.c  harfbuzz-markup.c  harfbuzz-texture.c  harfbuzz.c  lcd.c  markup.c  mat4.c  mat4.h  outline.c  screenshot-util.c  shader.c  shader.h  subpixel.c  texture.c
doc/: text-rendering.h
harfbuzz/: CMakeLists.txt  block-layout.c  block-layout.h  distance-field.c  distance-field.h  edtaa3func.c  edtaa3func.h  font-manager.c  font-manager.h  line-layout.c  line-layout.h  markup.h  text-buffer.c  text-buffer.h  texture-font.c  texture-font.h  utf8-utils.c  utf8-utils.h  vertex-attribute-gl.c  vertex-attribute-gl.h  vertex-buffer-gl.c  vertex-buffer-gl.h
windows/AntTweakBar/include/: AntTweakBar.h
